force-app/main/default/objects/Budget_Period__c/Budget_Period__c.object-meta.xml
<CustomObject>
    <description>A designated period of budgeting</description>
    <label>Budget Period</label>
    <nameField>
        <label>Budget Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>