force-app/main/default/objects/Budget_Period__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Additional information about the budget period</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>