force-app/main/default/objects/Budget_Period__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The closing date of the budget period</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>