force-app/main/default/objects/Budget_Period__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The beginning date of the budget period</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>