force-app/main/default/objects/Budget_Period__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <description>The total income during the budget period</description>
    <label>Total Income</label>
    <summarizedField>Transaction_Item__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Credit</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction_Item__c.Budget_Period__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>