force-app/main/default/objects/Budget_Period__c/fields/Total_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings__c</fullName>
    <formula>Total_Income__c - Total_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>